# ChangeLog for app-emulation/qemu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.71 2009/11/05 23:39:24 patrick Exp $

  05 Nov 2009; Patrick Lauer <patrick@gentoo.org> qemu-0.11.0.ebuild:
  Fixing bad --disable-gfx-check, closes #286370

*qemu-0.11.0 (23 Oct 2009)

  23 Oct 2009; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-0.11.0-mips64-user-fix.patch, +qemu-0.11.0.ebuild:
  New release

*qemu-0.10.6 (05 Sep 2009)

  05 Sep 2009; Luca Barbato <lu_zero@gentoo.org> +qemu-0.10.6.ebuild:
  Version Bump

*qemu-0.10.5 (07 Jun 2009)

  07 Jun 2009; Luca Barbato <lu_zero@gentoo.org> +qemu-0.10.5.ebuild:
  New version

  19 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> qemu-0.10.4.ebuild:
  Fix doc installation: install html in the html/ subdir, install more qemu
  doc, rename the README file (it's not qemu's proper), die on error.

  19 May 2009; Luca Barbato <lu_zero@gentoo.org> qemu-0.10.4.ebuild:
  fix missing patch, thanks to Martin Jansa <Martin.Jansa@mk.cvut.cz> for
  noticing

*qemu-0.10.4 (19 May 2009)

  19 May 2009; Luca Barbato <lu_zero@gentoo.org> +qemu-0.10.4.ebuild:
  New version

  17 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> qemu-0.10.3.ebuild,
  +files/qemu-ifdown, +files/qemu-ifup:
  Add missing ifup/ifdown scripts, change install logic, make sure they are
  not added executable to CVS.

*qemu-0.10.3 (17 May 2009)

  17 May 2009; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-0.10.3-nopl-fix.patch, +qemu-0.10.3.ebuild:
  New ebuild, thanks to Xake <xake@rymdraket.net> for contributing it in bug
  #190298

*qemu-0.10.1 (22 Mar 2009)

  22 Mar 2009; Luca Barbato <lu_zero@gentoo.org> +qemu-0.10.1.ebuild:
  Bugfix release

*qemu-0.10.0 (09 Mar 2009)

  09 Mar 2009; Luca Barbato <lu_zero@gentoo.org> +qemu-0.10.0.ebuild:
  New version

  03 Sep 2008; Thomas Anderson <gentoofan23@gentoo.org> qemu-0.9.1.ebuild: