@@ -13,8 +13,8 @@ EBUILD qemu-0.10.3.ebuild 4703 RMD160 e852ff28e625bc8f768a188ae71d66dbb23979f0 S
 EBUILD qemu-0.10.4.ebuild 4787 RMD160 0214208a4161cfa6e2d2d75a572379fc50d23dc1 SHA1 fb06754c253ca7f63a71f06e9e09feefa2ed284c SHA256 4c7dfada2f271567e6e10d2aeaabb7b7bfe67968668759ea12669db633ce0280
 EBUILD qemu-0.10.5.ebuild 4872 RMD160 4f1a41ec6567564968baa7c8790f7232f866a511 SHA1 781f1f5f1eaba1d8f99e9877bc3d55cf3f806a93 SHA256 fbedf067e0ebb55ab457dd2b2c648b8a5255d3b863ef2ecdf8db74ffc19a0b1c
 EBUILD qemu-0.10.6.ebuild 4844 RMD160 a4d3eabaf2fd25cc6fa4f4f9dbbb7147fefe246c SHA1 128bd72d72901ab07d6fe1223f36df0e30edd5b6 SHA256 b4b63038dbf1a1894c64943d72f9fcca4f1d86eafbb2b274b45de652df62d85a
-EBUILD qemu-0.11.0.ebuild 4811 RMD160 cd997b913d84ad21f1a0c865fafc0429d1b0ed19 SHA1 9bb6dc779faf12272fe9a2edf3bb0c7d2e8ec649 SHA256 25381f26e18191c948fbde6cda23fbdf36690b582c918d024b518472f67dd520
+EBUILD qemu-0.11.0.ebuild 4894 RMD160 ca1828c44bf74a7c280d4f7d91bd836bb384903f SHA1 ab50a4245235695c23bc7244ddeb40a4079b468d SHA256 2f22e313fa9d8f3df17d9fcabfc2e78f88e656b262eb914465647af2befd0a33
 EBUILD qemu-0.9.0.ebuild 503 RMD160 e6261c120b646da7f2106984ab8a833da1eaa095 SHA1 c4ec2424d608d4b38f395dbfe8f761ba4fbab835 SHA256 baa5050753763d8c20384f22de5e70748b100c66b8aa8a54107917519d00db4c
 EBUILD qemu-0.9.1.ebuild 515 RMD160 51683f0657c0e4ac6fbfa403fa9b81f027c9a830 SHA1 87031abd8579289862a692d32845b131f4cb3e1b SHA256 cd2b063cf0f40a170abfcbe2593ae1a82e99e3262d321a5bfdf02b5b62eab1e9
-MISC ChangeLog 9344 RMD160 5d722f36af08a431a0251758e22e6b3a3b0dc795 SHA1 3195c8b9b57b43d1ca544109a2580e92c3aba62f SHA256 7a60d753ce05369251a168fde41044e04dcd8a1d95d54aa5a0be9d2db9e54914
+MISC ChangeLog 9518 RMD160 6f40ef77ef96092e31a06e3b80a22f9e73cd3cda SHA1 29ddacb74839e6b251d73e8409c62a2d7352d008 SHA256 efe0858acd72f88bd47affdc90f98c742d4a088c0f7edfa20d709faa948fa7dc
 MISC metadata.xml 882 RMD160 259583b24a6eec2cbcca323e754f677041d44d54 SHA1 690460cdb502fd47b51eb1d51938d1c7629f7918 SHA256 8584426258959783d4da117036fa1d773b91b8f90d6a3c1ee7d065446e3d91f8
